--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+body {
+    background-color: lightgray;
+    alignment: center;
+}
+
+h1 {
+    color: #666666;
+    margin-left: 20px;
+    font-family: verdana, arial, helvetica, sans-serif;
+}
