--- a/app/views/authenticates/index.html.erb
+++ b/app/views/authenticates/index.html.erb
@@ -1,13 +1,22 @@
-<h1>Please enter your mobile number</h1>
-
-<%= form_tag authenticates_token_path do %>
+<div>
     <div>
-        <%= text_field_tag :mobile_number %>
-
-      <%= @token %>
+    <h1 align="center">Please enter your mobile number</h1>
     </div>
-    <div>
-        <%= submit_tag 'Confirm' %>
-    </div>
+    <div align="center">
+    <script src="validate.js"></script>
+    <%= form_tag authenticates_token_path do %>
+        <div>
+          <% flash.each do |key, value| %>
+              <div class="alert alert-<%= key %>"><%= value %></div>
+          <% end %>
+            <%= text_field_tag :mobile_number %>
 
-<% end %>
+          <%= @token %>
+        </div>
+        <div>
+            <%= submit_tag 'Confirm', :onclick => "return validate_mobile_number(#{:mobile_number});" %>
+        </div>
+
+    <%end %>
+    </div>
+</div>
